<resources>
    <string name="app_name">Notes &amp; Reminder</string>
    <string name="notesBundle">notesBundle</string>
    <string name="notesModel">notesModel</string>
    <string name="note_saved">Notes Saved At Downloads</string>
    <string name="file_name">File Name (without .txt)</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="edit_note">Edit Note</string>
    <string name="create_note">Create Notes</string>
    <string name="export">Export</string>
    <string name="reminder">Reminder</string>
    <string name="delete">Delete</string>
    <string name="title_activity_settings">SettingsActivity</string>/

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Edit</string>
    <string name="dialog_neutral">Turn off</string>
    <string name="export_button">Export</string>
    <string name="cancle_button">Cancel</string>
    <string name="menu_about">About</string>
    <string name="title">Title</string>
    <string name="start_typing_from_here">start typing from here…</string>
    <string name="add">add</string>
    <string name="created_by_code_lancer">Created By <b>Code Lancer</b></string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="rate_us_on_playstore">Rate Us on PlayStore</string>
    <string name="follow_us">Follow Us On..</string>

    <!-- Notification details -->
    <string name="channel_id">Reminder</string>
    <string name="channel_name">@string/app_name</string>

    <!-- Social Links -->
    <string name="instagram_link">https://www.instagram.com/code._lancer</string>
    <string name="twitter_link">https://www.twitter.com/code_lanc</string>
    <string name="medium_link">https://www.medium.com/@codelancer</string>
    <string name="youtube_link">https://www.youtube.com/channel/UC9Pw18wC1wyaooZ-B3tIHvg</string>

    <string name="paypal_link"><u>https://www.paypal.me/cod3lancer</u></string>



</resources>


